Refactor Date properties from String to Number type

--- a/client/user/src/mealorder/meal-order-client-app.html
+++ b/client/user/src/mealorder/meal-order-client-app.html
@@ -253,9 +253,9 @@
                      * @typedef {Object} Order the current order
                      *
                      * @typedef {Object} Date contains day, month, year
-                     * @property {String} day
-                     * @property {String} month
-                     * @property {String} year
+                     * @property {Number} day
+                     * @property {Number} month
+                     * @property {Number} year
                      *
                      * @typedef {Array} Cart array that contains the vendor and dishes
                      * @property {String} Vendor a vendor name
