--- a/client/user/test/mealorder/meal-order-drawer_test.html
+++ b/client/user/test/mealorder/meal-order-drawer_test.html
@@ -72,14 +72,14 @@
             ' with the `history` routing and the date', function (done) {
             component.addEventListener('changed-history-date', function (e) {
                 const date = {};
-                date.year = "2018";
-                date.month = "04";
-                date.day = "20";
+                date.year = 2018;
+                date.month = 4;
+                date.day = 20;
                 assert.deepEqual(e.detail, date);
                 done();
             });
             setLocation('/#/menu/');
-            setLocation('/#/history/2018-04-20');
+            setLocation('/#/history/2018-4-20');
         });
 
         test('should change URL by selecting the date in the calendar with `history` routing', function (done) {
