--- a/client/user/test/mealorder/meal-order-client-app_test.html
+++ b/client/user/test/mealorder/meal-order-client-app_test.html
@@ -32,8 +32,7 @@
     <script src="../../node_modules/redux/dist/redux.js"></script>
     <script src="test_variables.js"></script>
     <link rel="import" href="../../src/mealorder/meal-order-client-app.html">
-    <link rel="import" href="../../src/mealorder/menu/meal-order-menu-container.html">
-    <link rel="import" href="../../src/mealorder/menu/meal-order-drawer.html">
+    <link rel="import" href="./meal-order-app-test-namespace.html">
 </head>
 <body>
 
@@ -54,8 +53,6 @@
 
         setup(() => {
             component = fixture('MealOrderClientApp');
-            MealOrderAppTest.MealOrderDrawer = MealOrderDrawer;
-            MealOrderAppTest.MealOrderMenuContainer = MealOrderMenuContainer;
         });
 
         test('should parse `routeData.page` correctly', function () {
