Refactor MealOrderAppTest namespace

--- a/client/user/test/mealorder/meal-order-app-test-namespace.html
+++ b/client/user/test/mealorder/meal-order-app-test-namespace.html
@@ -20,6 +20,18 @@
 <link rel="import" href="../../src/mealorder/menu/meal-order-drawer.html">
 <link rel="import" href="../../src/mealorder/menu/meal-order-menu-container.html">
 
+<test-fixture id="MealOrderDrawer">
+    <template>
+        <meal-order-drawer></meal-order-drawer>
+    </template>
+</test-fixture>
+
+<test-fixture id="MealOrderMenuContainer">
+    <template>
+        <meal-order-menu-container></meal-order-menu-container>
+    </template>
+</test-fixture>
+
 <script>
     /**
      * A bunch of elements for meal order application tests.
