--- a/client/user/src/mealorder/menu/meal-order-vendor-menus.html
+++ b/client/user/src/mealorder/menu/meal-order-vendor-menus.html
@@ -173,7 +173,7 @@
                             dishes: newVendorDishes
                         });
                     }
-                    filtered.push({name: this.items[i].name, categories: newVendorCategories});
+                    filtered.push({vendor: this.items[i].vendor, categories: newVendorCategories});
                 }
                 return filtered;
             }
