--- a/client/user/test/mealorder/menu/meal-order-menu-container_test.html
+++ b/client/user/test/mealorder/menu/meal-order-menu-container_test.html
@@ -27,11 +27,11 @@
 
     <title>meal-order-menu-container test</title>
 
-    <script src="../../bower_components/webcomponentsjs/webcomponents-loader.js"></script>
-    <script src="../../bower_components/web-component-tester/browser.js"></script>
-    <script src="../../node_modules/redux/dist/redux.js"></script>
-    <script src="test_variables.js"></script>
-    <link rel="import" href="../../src/mealorder/menu/meal-order-menu-container.html">
+    <script src="../../../bower_components/webcomponentsjs/webcomponents-loader.js"></script>
+    <script src="../../../bower_components/web-component-tester/browser.js"></script>
+    <script src="../../../node_modules/redux/dist/redux.js"></script>
+    <script src="../test_variables.js"></script>
+    <link rel="import" href="../../../src/mealorder/menu/meal-order-menu-container.html">
 </head>
 <body>
 
