--- a/client/user/src/mealorder/menu/meal-order-vendor-menu.html
+++ b/client/user/src/mealorder/menu/meal-order-vendor-menu.html
@@ -107,7 +107,7 @@
         <div class="header">
             <paper-item on-click="_toggle" class="menu-caption">
                 <div class="menu-caption">
-                    [[menu.name]]
+                    [[menu.vendor]]
                     <paper-icon-button id="expand" icon="expand-less"></paper-icon-button>
                 </div>
             </paper-item>
@@ -215,7 +215,7 @@
 
             _addDish(e) {
                 const dish = {};
-                dish.vendor = this.menu.name;
+                dish.vendor = this.menu.vendor;
                 dish.price = this.menu.categories[e.model.parentModel.index].dishes[e.model.index].price;
                 dish.title = this.menu.categories[e.model.parentModel.index].dishes[e.model.index].title;
                 this.dispatchEvent(new CustomEvent('dish-added', {composed: true, detail: dish}));
