Add background color to the `app-header-layout`

--- a/client/user/index.html
+++ b/client/user/index.html
@@ -29,6 +29,11 @@
     <link rel=import href="src/mealorder/meal-order-client-app.html">
     <title>MealOrder</title>
 </head>
+<style>
+    body {
+        font-family: 'Roboto', 'Noto', sans-serif;
+    }
+</style>
 <body>
 <meal-order-client-app></meal-order-client-app>
 </body>
