--- a/client/user/src/mealorder/meal-order-client-app.html
+++ b/client/user/src/mealorder/meal-order-client-app.html
@@ -56,8 +56,11 @@
                 font-size: 1.375em;
             }
 
+            app-header-layout {
+                background-color: var(--paper-grey-100);
+            }
+
             app-drawer-layout {
-                font-family: 'Roboto', 'Noto', sans-serif;
                 background-color: var(--paper-grey-100);
                 color: var(--google-grey-700);
             }
